--- a/index.htm
+++ b/index.htm
@@ -21,8 +21,9 @@
 
 			</div>
 
-			<div class=" center-block">
-				<textarea id="output" class="col-xs-12">
+			<div class="center-block col-xs-12">
+				<br />
+				<textarea id="output" class="text-center center-block" style="width: 70%">
 					 
 				</textarea>
 			</div>
