--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
-<html lang="en"  ng-app="myApp">
-	<head>
-		<meta charset="UTF-8">
+<html>
+  <head>
+    <title>Jam as a Service</title>
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
-		<script src="https://code.angularjs.org/1.5.8/angular-route.min.js"></script>
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href='https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed' rel='stylesheet' type='text/css'>
-		<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
+    <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
 		<link href='css/style.css' rel='stylesheet' type='text/css'>
+  </head>
 
-		<script src="js/app.js"></script>
-		<script src="js/controllers.js"></script>
-		<script src="js/speech.1.0.0.js" type="text/javascript"></script>
-		<script src="js/script.js" type="text/javascript"></script>
-		<script src="js/toMusic.js" type="text/javascript"></script>
-
-	</head>
 	<body class="container-fluid" >
-		<div class="row" autoscroll="true" ng-view></div>
+		<div class="row" autoscroll="true">
+      <div class="col-xs-12 text-center">
+      	<h1>JASS</h1>
+      	<p>Jam As A Service</p>
+      	<div class="text-center center-block" id="toggle">
+      		<span id="mic"><i class="fa fa-microphone fa-5x"></i></span>
+      	</div>
+      </div>
+
+      <!-- <div class="center-block col-xs-12" style="padding-top: 200px;">
+      	<form class="form-group">
+      		<textarea id="output" class="form-control center-block" style="width: 70%"> </textarea>
+      	</form>
+      </div> -->
+    </div>
+
+    <div id="playback"></div>
+
+  	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <script src="js/script.js" type="text/javascript"></script>
+    <script src="js/record.js" type="text/javascript"></script>
+    <script src="js/synth.js" type="text/javascript"></script>
 	</body>
-	<script src="js/ngStorage.js"></script>
-	<script src="https://code.angularjs.org/1.5.0-rc.0/angular-sanitize.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </html>
