Remove unused view

--- a/index.html
+++ b/index.html
@@ -16,16 +16,10 @@
       <div class="col-xs-12 text-center">
       	<h1>JASS</h1>
       	<p>Jam As A Service</p>
-      	<div class="text-center center-block" id="toggle">
+      	<div class="text-center center-block" id="toggle" style="padding-top: 200px;">
       		<span id="mic"><i class="fa fa-microphone fa-5x"></i></span>
       	</div>
       </div>
-
-      <!-- <div class="center-block col-xs-12" style="padding-top: 200px;">
-      	<form class="form-group">
-      		<textarea id="output" class="form-control center-block" style="width: 70%"> </textarea>
-      	</form>
-      </div> -->
     </div>
 
     <div id="playback"></div>
