--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="col-xs-12 text-center">
       	<h1>JASS</h1>
       	<p>Jam As A Service</p>
-      	<div class="text-center center-block" id="toggle" style="padding-top: 200px;">
-      		<span id="mic"><i class="fa fa-microphone fa-5x"></i></span>
+      	<div class="text-center center-block" id="toggle" style="margin-top: 200px;">
+      		<a id="mic"><i class="fa fa-microphone fa-5x"></i></a>
       	</div>
       </div>
     </div>
