--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
     <script src="js/script.js" type="text/javascript"></script>
     <script src="js/record.js" type="text/javascript"></script>
     <script src="js/synth.js" type="text/javascript"></script>
+    <script src="js/cognitive.js" type="text/javascript"></script>
 	</body>
 </html>
