--- a/index.html
+++ b/index.html
@@ -1,34 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Jam as a Service</title>
+	<head>
+		<title>Jam as a Service</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link href='https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed' rel='stylesheet' type='text/css'>
-    <link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
+		<link href='https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css' rel='stylesheet' type='text/css'>
 		<link href='css/style.css' rel='stylesheet' type='text/css'>
-  </head>
+	</head>
 
 	<body class="container-fluid" >
 		<div class="row" autoscroll="true">
-      <div class="col-xs-12 text-center">
-      	<h1>JASS</h1>
-      	<p>Jam As A Service</p>
-      	<div class="text-center center-block" id="toggle" style="margin-top: 200px;">
-      		<a id="mic"><i class="fa fa-microphone fa-5x"></i></a>
-      	</div>
-      </div>
-    </div>
+			<div class="col-xs-12 text-center">
+				<h1>JASS</h1>
+				<p>
+					Jam As A Service
+				</p>
+				<div class="text-center center-block" id="toggle" style="margin-top: 200px;">
+					<a id="mic"><i class="fa fa-microphone fa-5x"></i></a>
+				</div>
+			</div>
+		</div>
+		<div class="row" id="previewRow" >
+			<div class="col-xs-6">
+				<div id="playback"></div>
+			</div>
+			<div class="col-xs-6 pull-right">
+				<div id="downloadLink"></div>
+			</div>
+		</div>
 
-    <div id="playback"></div>
+		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-  	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
-  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-    <script src="js/script.js" type="text/javascript"></script>
-    <script src="js/record.js" type="text/javascript"></script>
-    <script src="js/synth.js" type="text/javascript"></script>
+		<script src="js/script.js" type="text/javascript"></script>
+		<script src="js/record.js" type="text/javascript"></script>
+		<script src="js/synth.js" type="text/javascript"></script>
 	</body>
 </html>
